2009-02-12  John W. Eaton  <jwe@octave.org>

	* TEMPLATE-INST/Array-tc.cc: Undo previous change.
	(octave_sort<octave_value>::ascending_compare,
	octave_sort<octave_value>::descending_compare):
	Pass args by const reference instead of value.

	* version.h (OCTAVE_VERSION): Now 3.1.52+.
	(OCTAVE_API_VERSION): Now api-v34+.

	* TEMPLATE-INST/Array-tc.cc
	(octave_sort<octave_value>::ascending_compare,
	octave_sort<octave_value>::descending_compare):
	Delete unused template specializations.
	Use NO_INSTANTIATE_ARRAY_SORT instead of INSTANTIATE_ARRAY_SORT
	for octave_values.

2009-02-11  Thomas Treichl  <Thomas.Treichl@gmx.net>

	* gl-render.h: Use HAVE_FRAMEWORK_OPENGL.
	* gl-render.cc (opengl_tesselator, opengl_renderer::draw, 
	opengl_renderer::init_marker): Use HAVE_FRAMEWORK_OPENGL.
	
2009-02-11  Jaroslav Hajek  <highegg@gmail.com>

	* ov.h (octave_value::issorted, octave_value::sortrows_idx,
	octave_value::issorted_rows): New methods.
	* ov.cc (octave_base_value::issorted, octave_base_value::sortrows_idx,
	octave_base_value::issorted_rows): New methods.
	* ov.cc: Declare them.

	* ov-base-mat.h (octave_base_matrix::issorted, octave_base_matrix::sortrows_idx,
	octave_base_matrix::issorted_rows): New methods.

	* ov-base-diag.h (octave_base_diag::issorted, octave_base_diag::sortrows_idx,
	octave_base_diag::issorted_rows): New methods.

	* ov-perm.h (octave_perm_matrix::issorted, octave_perm_matrix::sortrows_idx,
	octave_perm_matrix::issorted_rows): New methods.

	* ov-range.h (octave_range::issorted, octave_range::sortrows_idx,
	octave_range::issorted_rows): New methods.

	* data.cc (F__sortrows_idx__, Fissorted): New defuns.

2009-02-11  John W. Eaton  <jwe@octave.org>

	* toplev.cc (octave_config_info): Add octetcdir to the struct.
	* defaults.h.in (OCTAVE_OCTETCDIR): New macro.

2009-02-10  Jaroslav Hajek  <highegg@gmail.com>

	* DLD-FUNCTIONS/__pchip_deriv__.cc (F__pchip_deriv__):
	Add support for computing pchip derivatives along rows of matrix.