@@ -64,6 +64,8 @@ public:
 
   Cell (const string_vector& sv, bool trim = false);
 
+  Cell (const Array<std::string>& sa);
+
   Cell (const dim_vector& dv, const string_vector& sv, bool trim = false);
 
   Cell (const Cell& c)
